# Mesen2

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml  build_c_api.yml
Android/: .gitignore  Makefile  build.gradle
Android/app/: build.gradle
Android/app/src/main/: AndroidManifest.xml
Android/app/src/main/cpp/: CMakeLists.txt  binding.cpp  com_example_mesen_demo_MesenAPI.h
Android/app/src/main/java/com/example/mesen/demo/: MainActivity.java  MesenAPI.java  NesGamepadView.java  RequestType.java  SurfaceViewRenderer.java
Android/app/src/main/java/com/example/mesen/demo/utils/: CopyExternalFileToLocalFilesDir.java  FilePicker.java  Tip.java
Android/app/src/main/res/layout/: activity_main.xml
Android/app/src/main/res/values/: attrs.xml
Android/gradle/wrapper/: gradle-wrapper.properties
Core/: pch.h
Core/Debugger/: DebugBreakHelper.cpp  DebugBreakHelper.h  DebuggerFeatures.h  Disassembler.cpp  PpuTools.cpp  PpuTools.h
Core/GBA/Debugger/: GbaPpuTools.cpp
Core/Gameboy/Debugger/: GbPpuTools.cpp
Core/NES/: GameDatabase.cpp
Core/NES/Mappers/Sachen/: Sachen74LS374N.h
Core/NES/Mappers/Unlicensed/: Mapper15.cpp  Mapper15.h
Core/PCE/Debugger/: PceVdcTools.cpp
Core/SMS/Debugger/: SmsVdpTools.cpp
Core/SNES/Debugger/: SnesPpuTools.cpp
Core/Shared/: Emulator.cpp
Core/Shared/Interfaces/: INotificationListener.h
Core/Shared/Video/: VideoDecoder.cpp  VideoDecoder.h
Core/WS/: WsController.cpp  WsController.h  WsPpu.h
DesktopApp/: CMakeLists.txt  Makefile  imgui.ini  resources.qrc
DesktopApp/src/: ControlsSettingDialog.cpp  ControlsSettingDialog.h  GameSoundDevice.cpp  GameView.cpp  GameView.h  MainWindow.cpp  MainWindow.h  VirtualKey.cpp  VirtualKey.h  game_sound_device.cpp  game_sound_device.h  game_view.cpp  game_view.h  main.cpp  main_window.cpp  main_window.h  menu.cpp  menu.h
ExportAPI/: README.md
ExportAPI/examples/: profile.cpp
ExportAPI/examples/TakeScreenshot/: main.cpp
ExportAPI/examples/TerminalPlayer/: main.cpp
ExportAPI/include/Mesen/: Mesen.h
ExportAPI/src/: config_api.cpp  dump.cpp  dump.h  emu_api.cpp  emulator_api.cpp  input_api.cpp  static_check.cpp  test.cpp  test.py
ExportAPI/tools/: generate_NES_DB.py
InteropDLL/: Common.h  EmuApiWrapper.cpp
SoftwareDevice/: SoftwareKeyManager.cpp  SoftwareKeyManager.h  SoftwareSoundManager.cpp  SoftwareSoundManager.h
TerminalPlayer/: main.cpp
WebAssembly/: .gitignore  CMakeLists.txt  Makefile  docker-compose.yml  nginx.conf  package-lock.json  package.json  webpack.config.js
WebAssembly/src/: index.html  main.js  native.cpp  play.html
